<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prost</string>

    <string name="beer_button">New beer</string>
    <string name="clear_database">Clear database</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="newDrink">New</string>
    <string name="select_tile_logic">Select tile logic</string>
    <string name="locations">Locations</string>

    <string-array name="commands">
        <item>Empty</item>
        <item>Total drinks</item>
        <item>Total beers</item>
        <item>Total shots</item>
        <item>Total cocktails</item>
        <item>Total liters</item>
        <item>Liters per hour</item>
        <item>Beer liters per hour</item>
        <item>Shot liters per hour</item>
        <item>Cocktail liters per hour</item>
    </string-array>
    <string-array name="commands_values">
        <item>Empty</item>
        <item>TotalDrinksCount</item>
        <item>TotalBeersCount</item>
        <item>TotalShotsCount</item>
        <item>TotalCocktailsCount</item>
        <item>TotalLiters</item>
        <item>LitersPerHour</item>
        <item>BeerLitersPerHour</item>
        <item>ShotLitersPerHour</item>
        <item>CocktailLitersPerHour</item>
    </string-array>

    <string name="commands_category">Tiles</string>
    <string name="top_left_tile">Top left tile</string>
    <string name="top_tile">Top tile</string>
    <string name="top_right_tile">Top right tile</string>
    <string name="left_tile">Left tile</string>
    <string name="right_tile">Right tile</string>
    <string name="bottom_left_tile">Bottom left tile</string>
    <string name="bottom_tile">Bottom tile</string>
    <string name="bottom_right_tile">Bottom right tile</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_edit_drink">Edit drink</string>
    <string name="activity_title_edit_bar">Edit bar</string>
    <string name="activity_title_bars_map">Bar locations</string>
    <string name="fragment_title_statistics">Statistics</string>
    <string name="fragment_title_bars">Bars</string>
    <string name="fragment_title_drinks">Drinks</string>
    <string name="no_drinks">no drinks configured yet</string>
    <string name="no_bars">no bars configured yet</string>
    <string name="drinks_name">Name</string>
    <string name="drinks_type">Type</string>
    <string name="drinks_size">Unit (in ml)</string>
    <string name="drinks_price">Price (in cents)</string>
    <string name="drinks_bar">Bar</string>
    <string name="add_drink">Add drink</string>
    <string name="delete_drink">Delete drink</string>
    <string name="delete_drink_question">Do you really want to delete the drink \'%s\'?</string>
    <string name="drink_usage">It is used %d times.</string>
    <string name="delete_bar">Delete bar</string>
    <string name="delete_bar_question">Do you really want to delete the bar \'%s\'?</string>
    <string name="select_drink_type">Select drink type</string>
    <string name="bars_name">Name</string>
    <string name="add_bar">Add bar</string>
    <string name="no_bar">No bar</string>
    <string-array name="drink_types">
        <item >Beer</item>
        <item >Shot</item>
        <item >Cocktail</item>
    </string-array>

</resources>
